Fix Image relative URL

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
                 <h2>Screenshots</h2>
                 <div>
                     <h3>Main UI</h3>
-                    <img src="/Images/FilterBox.png" alt="FilterBox UI"/>
+                    <img src="Images/FilterBox.png" alt="FilterBox UI"/>
                 </div>
 
                 <div>
                     <h3>System tray</h3>
-                    <img src="/Images/SystemTray.png" alt="System Tray Menu"/>
+                    <img src="Images/SystemTray.png" alt="System Tray Menu"/>
                 </div>
             </div>
 
