Add custom domain

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://techial.github.io/FilterBox/">
+        <meta property="og:url" content="https://filterbox.techial.net/">
         <meta property="og:title" content="FilterBox - Save DropBox storage">
         <meta property="og:description" content="FilterBox automatically filters through your DropBox folder in realtime, and stops files/folders from being uploaded, using your own custom filters.">
-        <meta property="og:image" content="https://techial.github.io/FilterBox/Images/FilterBox-Social.png">
+        <meta property="og:image" content="https://filterbox.techial.net/Images/FilterBox-Social.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://techial.github.io/FilterBox/">
+        <meta property="twitter:url" content="https://filterbox.techial.net/">
         <meta property="twitter:title" content="FilterBox - Save DropBox storage">
         <meta property="twitter:description" content="FilterBox automatically filters through your DropBox folder in realtime, and stops files/folders from being uploaded, using your own custom filters.">
-        <meta property="twitter:image" content="https://techial.github.io/FilterBox/Images/FilterBox-Social.png">
+        <meta property="twitter:image" content="https://filterbox.techial.net/Images/FilterBox-Social.png">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
