Wrong header name in Features section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
 
             <div id="features" class="section">
-                <h2>Table of Contents</h2>
+                <h2>Features</h2>
                 <ul>
                     <li>
                         <p><strong>small size:</strong> app is intentionally built to run on already existing and popular runtimes to reduce footprint</p>
